payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: default
  labels:
    app: payment
spec:
  replicas: 1
  selector:
      matchLabels:
        app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap-payment
---

apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: default
spec:
  selector:
    app: payment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
