ingess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: shopping-cart.info
    http:
      paths:
      - path: /shop
        pathType: Exact
        backend:
          service:
            name: shop
            port:
              number: 80
      - path: /cart
        pathType: Exact
        backend:
          service:
            name: cart
            port:
              number: 80
      - path: /checkout
        pathType: Exact
        backend:
          service:
            name: checkout
            port:
              number: 80
      - path: /payment
        pathType: Exact
        backend:
          service:
            name: payment
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: web
            port:
              number: 80
